# ros2_nav2_autonomus_navigation

./: .gitignore  HARDWARE_SETUP.md  README.md  frames_2025-03-15_03.10.57.gv  frames_2025-03-15_03.12.10.gv  frames_2025-03-15_03.15.25.gv  navigation_action_server.py
agv_proto/: CMakeLists.txt  package.xml
agv_proto/config/: nav2_params.yaml
agv_proto/include/agv_proto/: robot_hardware_interface_agv.hpp
agv_proto/launch/: autonomous_nav.launch.py  diffbot_system.launch.py  navigation.launch.py
agv_proto/src/: my_nav2_goal_client.cpp  robot_hardware_interface_agv.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/minibot_simulation/share/minibot_simulation/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/minibot_simulation/share/minibot_simulation/launch/: gz_bridge.launch.py  multi_camera_simplified.launch.py
install/tracked_robot_controller/lib/tracked_robot_controller/: cmd_vel_to_tracks  track_odometry
install/tracked_robot_controller/share/tracked_robot_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.xml
install/tracked_robot_controller/share/tracked_robot_controller/cmake/: tracked_robot_controllerConfig-version.cmake  tracked_robot_controllerConfig.cmake
install/tracked_robot_controller/share/tracked_robot_controller/environment/: ament_prefix_path.dsv  path.dsv
install/tracked_robot_description/share/tracked_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/zed_topic_benchmark_interfaces/share/zed_topic_benchmark_interfaces/: local_setup.sh  package.sh
log/: latest_build
minibot_simulation/: CMakeLists.txt  package.xml
minibot_simulation/rviz/: multi_camera.rviz  sim.rviz
minibot_simulation/worlds/: empty.sdf
robot_web_interface/: README.md  package-lock.json  package.json  start.sh  webpack.config.js
robot_web_interface/server/: requirements.txt  ros_bridge.py
robot_web_interface/src/: index.html  index.js  styles.css
robot_web_interface/src/components/: App.js  ConnectionStatus.js  Dashboard.js  MapVisualization.js  RobotControl.js  Settings.js
robot_web_interface/src/utils/: rosConnection.js
ros_odrive_msg/: package.xml
tracked_robot_controller/: CMakeLists.txt
tracked_robot_controller/src/: cmd_vel_to_tracks.cpp  track_odometry.cpp
tracked_robot_description/: CMakeLists.txt  package.xml
tracked_robot_description/launch/: robot_state_publisher.launch.py
tracked_robot_description/urdf/: tracked_robot.urdf  tracked_robot.urdf.xacro
tracked_robot_nav/: CMakeLists.txt  DRL_NAVIGATION.md  DRL_NAVIGATION_QUICKSTART.md  DRL_NAVIGATION_README.md  package.xml
tracked_robot_nav/config/: costmap_test.rviz  costmap_test.yaml  keepout_nav2_params.yaml  keepout_params.yaml  map_test.rviz  nav2_params.yaml  navigation.rviz  simple_map.rviz  slam.rviz  slam_params.yaml  speedlimit_nav2_params.yaml
tracked_robot_nav/launch/: autonomous_nav.launch.py  costmap_filter_info.launch.py  costmap_test.launch.py  exploration.launch.py  keepout_navigation.launch.py  mapping.launch.py  mapping_simple.launch.py  mapping_zed.launch.py  navigation.launch.py  robot_complete.launch.py  slam.launch.py  speedlimit_navigation.launch.py  test_map_loading.launch.py
tracked_robot_nav/maps/: map.yaml  map_keepout.yaml  map_speedlimit.yaml
tracked_robot_nav/scripts/: build_nav2_costmap.sh  run_rviz_map.sh  run_rviz_remote.sh  setup_ros_network.sh  start_autonomous_nav.sh  start_drl_navigation.sh  start_exploration.sh  start_fresh_mapping.sh  test_costmap.sh  test_map_loading.sh
tracked_robot_nav/scripts/drl_navigation/: __init__.py  point_cloud2.py  replay_buffer.py  run_drl_navigation.py  td3_zed_navigation.py  test_drl_navigation.py
tracked_robot_nav/scripts/drl_navigation/runs/: events.out.tfevents.1742234191.ubuntu.26993.0  events.out.tfevents.1742234299.ubuntu.28345.0  events.out.tfevents.1742234524.ubuntu.32102.0
tracked_robot_sim/: CMakeLists.txt  README.md  package.xml
tracked_robot_sim/config/: zed2i_config.yaml
tracked_robot_sim/launch/: gazebo_only.launch.py  rviz_costmap.launch.py  rviz_with_qos.launch.py  tracked_robot.launch.py  tracked_robot_with_nav.launch.py
tracked_robot_sim/models/tracked_robot/: model.config  model.sdf
tracked_robot_sim/rviz/: tracked_robot.rviz
tracked_robot_sim/scripts/: track_controller_node.py
tracked_robot_sim/urdf/: tracked_robot.urdf
tracked_robot_sim/worlds/: tracked_robot_world.sdf  tracked_robot_world.world
tracked_robot_simulation/: CMakeLists.txt  GAZEBO_RVIZ_SYNC.md  README.md  README_SIMULATION.md  TROUBLESHOOTING.md  package.xml
tracked_robot_simulation/config/: debug.rviz  full_simulation.rviz  navigation.rviz  simulation.rviz
tracked_robot_simulation/launch/: auto_teleop.launch.py  autonomous_navigation.launch.py  debug_visualization.launch.py  direct_autonomous_navigation.launch.py  full_simulation.launch.py  gazebo_simulation.launch.py  navigation_simulation.launch.py  python_odom_simulation.launch.py  robot_localization.launch.py  robot_localization_simulation.launch.py  rviz.launch.py  simple_teleop.launch.py  simulation_complete.launch.py  spawn_robot.launch.py  teleop.launch.py  visualization_only.launch.py
tracked_robot_simulation/maps/: map.pgm  map.yaml
tracked_robot_simulation/models/: diff_drive_controller.sdf  tracked_robot.sdf
tracked_robot_simulation/scripts/: auto_teleop.py  odom_to_tf.py  simple_robot_control.py  simple_teleop.py
tracked_robot_simulation/src/: gazebo_obstacle_visualizer.cpp  obstacle_visualizer.cpp  odom_to_tf.cpp
tracked_robot_simulation/tracked_robot_simulation/: autonomous_navigation.py
tracked_robot_simulation/urdf/: tracked_robot_gazebo.gazebo  tracked_robot_gazebo.urdf.xacro
tracked_robot_simulation/worlds/: obstacle_world.world  unknown_environment.world
zed_navigation_config/: CMakeLists.txt  package.xml
zed_navigation_config/launch/: zed2i_nav.launch.py
(+26 files in other folders)
