<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minibot_simulation</name>
  <version>0.0.1</version>
  <description>ROS 2 and Gazebo simulation package for Minibot</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>ros_gz_sim</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>image_view</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>